added new section, photo, text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="hero_main">
+            <div class="hero_main_text">
+                <div class="hero_main_title">Broccoli is awesome.</div>
+                <div class="hero_main_secondary">You can always come to us, when you have some problem with concentracion or procrastination. We can help. Honestly.</div>
+                <button class="sign-up">Get some help.</button>
+            </div>
+        <div class="hero_main_photo">
+            <img class="hero_photo" src="images/hero_photo.jpg" alt="photo of beautifull woman">
+        </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
