--- a/index.html
+++ b/index.html
@@ -31,6 +31,33 @@
             <img class="hero_photo" src="images/hero_photo.jpg" alt="photo of beautifull woman">
         </div>
         </div>
+        <div class="info">
+            <div class="info_title">Broccoli makes people productive</div>
+            <div class="info_photoes">
+                <div class="info_photo">
+                    <div class="photo1"></div>
+                    <p class="info_descr">"Broccoli helps to change you!"</p>
+                </div>
+                <div class="info_photo">
+                    <div class="photo2"></div>
+                    <p class="info_descr">"If you feel bad - go and join us!"</p>
+                </div>
+                <div class="info_photo">
+                    <div class="photo3"></div>
+                    <p class="info_descr">"You can feel happiness and be full of energy!"</p>
+                </div>
+                <div class="info_photo">
+                    <div class="photo4"></div>
+                    <p class="info_descr">"Brocoli fixes your loneliness!"</p>
+                </div>
+            </div>
+        </div>
+        <div class="quote_section">
+            <div class="quote_text">This is an inspiring quote, or a testimonal from a customer. Maybe it`s just filling up space, or maybe people
+                will actually read it. Who knows? All i know is that it looks nice.
+            </div>
+            <div class="quote_author">-Thor, God of thunder</div>
+        </div>
     </main>
     <footer></footer>
 </body>
