added new section call action, text, button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
             </div>
             <div class="quote_author">-Thor, God of thunder</div>
         </div>
+        <div class="call_section">
+            <div class="call_window">
+                <div class="call_action">
+                    <div class="call_text">
+                    <div class="call_title">Call to  action! It's time!</div>
+                    <div class="call_descr">Sign up for our product by clicking that button right overthere!</div>
+                </div>
+                    <button class="call_btn">Sign up</button>
+                </div>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
