added footer, finished project

--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>Copyright &nbsp;  &#169; &nbsp; The Odin Project 2024</footer>
 </body>
 </html>
